Agregando y actualizando componentes

--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -5,7 +5,8 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout>
+	<h1 class="text-xl font-semibold mb-4">Peliculas Destacadas</h1>
 	<Welcome />
-	<h2 class="text-xl font-semibold mb-4">Explora películas populares</h2>
+	
   <!-- aquí irán tus tarjetas o buscador -->
 </Layout>
