Modularizando Header en sub componentes y reactorizando Header y layout

--- a/frontend/src/layouts/Layout.astro
+++ b/frontend/src/layouts/Layout.astro
@@ -11,7 +11,7 @@ import Footer from '@/components/Footer.astro';
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cinéfilo Interactivo</title>
   </head>
-  <body class="debug-containers bg-white dark:bg-gray-900 text-gray-800 dark:text-gray-100 min-h-screen flex flex-col transition-colors duration-300">
+  <body class="debug-containers overflow-x-hidden bg-white dark:bg-gray-900 text-gray-800 dark:text-gray-100 min-h-screen flex flex-col transition-colors duration-300">
 
     <Header />
 
